--- a/OutDoorsySearch/Base.lproj/Main.storyboard
+++ b/OutDoorsySearch/Base.lproj/Main.storyboard
@@ -8,16 +8,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--List View Controller-->
+        <!--Vehicle List-->
         <scene sceneID="POS-ay-K6L">
             <objects>
-                <viewController id="PGv-Y2-cnv" customClass="ListViewController" customModule="OutdoorsySearch" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Vehicle List" id="PGv-Y2-cnv" customClass="ListViewController" customModule="OutdoorsySearch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BMY-dT-hVw">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="d6V-BH-w2N">
-                                <rect key="frame" x="0.0" y="60" width="414" height="56"/>
+                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="d6V-BH-w2N">
+                                <rect key="frame" x="10" y="60" width="394" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="PGv-Y2-cnv" id="Wq1-A0-IAW"/>
@@ -27,15 +27,15 @@
                                 <rect key="frame" x="0.0" y="116" width="414" height="780"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="111" id="szB-oO-bxm" customClass="ListTableCell" customModule="OutdoorsySearch" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="111"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="81" id="szB-oO-bxm" customClass="ListTableCell" customModule="OutdoorsySearch" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="81"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="szB-oO-bxm" id="oDL-2v-0QR">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="111"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="81"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nVC-Og-DDH">
-                                                    <rect key="frame" x="20" y="20" width="100" height="71"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="nVC-Og-DDH">
+                                                    <rect key="frame" x="20" y="5" width="100" height="71"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="71" id="CIp-A2-Fdy"/>
@@ -49,8 +49,8 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tgo-VA-eDR">
-                                                    <rect key="frame" x="130" y="20" width="264" height="71"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="130" y="5" width="264" height="71"/>
+                                                    <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -58,11 +58,11 @@
                                             <constraints>
                                                 <constraint firstItem="tgo-VA-eDR" firstAttribute="leading" secondItem="nVC-Og-DDH" secondAttribute="trailing" constant="10" id="6kF-yy-qYJ"/>
                                                 <constraint firstItem="nVC-Og-DDH" firstAttribute="centerY" secondItem="oDL-2v-0QR" secondAttribute="centerY" id="B1p-sr-I40"/>
-                                                <constraint firstAttribute="bottom" secondItem="nVC-Og-DDH" secondAttribute="bottom" priority="750" constant="20" id="Loi-bu-Bta"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="nVC-Og-DDH" secondAttribute="bottom" constant="5" id="EAj-fE-vnQ"/>
                                                 <constraint firstItem="nVC-Og-DDH" firstAttribute="leading" secondItem="oDL-2v-0QR" secondAttribute="leading" constant="20" id="RgM-s5-rGC"/>
-                                                <constraint firstItem="tgo-VA-eDR" firstAttribute="top" secondItem="oDL-2v-0QR" secondAttribute="top" constant="20" id="XuE-9b-ZAd"/>
-                                                <constraint firstAttribute="bottom" secondItem="tgo-VA-eDR" secondAttribute="bottom" constant="20" id="i8j-HN-nOJ"/>
-                                                <constraint firstItem="nVC-Og-DDH" firstAttribute="top" secondItem="oDL-2v-0QR" secondAttribute="top" priority="750" constant="20" id="lVC-Je-f14"/>
+                                                <constraint firstItem="tgo-VA-eDR" firstAttribute="top" secondItem="oDL-2v-0QR" secondAttribute="top" constant="5" id="XuE-9b-ZAd"/>
+                                                <constraint firstItem="nVC-Og-DDH" firstAttribute="top" relation="greaterThanOrEqual" secondItem="oDL-2v-0QR" secondAttribute="top" constant="5" id="hhb-D7-mPk"/>
+                                                <constraint firstAttribute="bottom" secondItem="tgo-VA-eDR" secondAttribute="bottom" constant="5" id="i8j-HN-nOJ"/>
                                                 <constraint firstAttribute="trailing" secondItem="tgo-VA-eDR" secondAttribute="trailing" constant="20" id="uPH-1n-jov"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -77,6 +77,18 @@
                                     <outlet property="delegate" destination="PGv-Y2-cnv" id="Nrn-xd-Cth"/>
                                 </connections>
                             </tableView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No vehicles found with your search keyword" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="L4i-kN-d6J">
+                                <rect key="frame" x="20" y="424" width="374" height="48"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="15"/>
+                                <color key="textColor" red="0.0039215686274509803" green="0.26666666666666666" blue="0.12941176470588234" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" id="gWE-H8-hBa">
+                                <rect key="frame" x="189" y="430" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4PZ-YK-QYQ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -85,13 +97,15 @@
                             <constraint firstItem="Q2l-xi-Nbc" firstAttribute="trailing" secondItem="4PZ-YK-QYQ" secondAttribute="trailing" id="RSZ-nM-8HM"/>
                             <constraint firstItem="Q2l-xi-Nbc" firstAttribute="leading" secondItem="4PZ-YK-QYQ" secondAttribute="leading" id="VIY-Nc-78C"/>
                             <constraint firstItem="Q2l-xi-Nbc" firstAttribute="top" secondItem="d6V-BH-w2N" secondAttribute="bottom" id="cb4-u4-zCN"/>
-                            <constraint firstItem="d6V-BH-w2N" firstAttribute="trailing" secondItem="4PZ-YK-QYQ" secondAttribute="trailing" id="dYG-uj-Ztb"/>
+                            <constraint firstItem="d6V-BH-w2N" firstAttribute="trailing" secondItem="BMY-dT-hVw" secondAttribute="trailing" constant="-10" id="dYG-uj-Ztb"/>
                             <constraint firstAttribute="bottom" secondItem="Q2l-xi-Nbc" secondAttribute="bottom" id="hoQ-V4-2yn"/>
-                            <constraint firstItem="d6V-BH-w2N" firstAttribute="leading" secondItem="4PZ-YK-QYQ" secondAttribute="leading" id="kGu-SQ-MdD"/>
+                            <constraint firstItem="d6V-BH-w2N" firstAttribute="leading" secondItem="4PZ-YK-QYQ" secondAttribute="leading" constant="10" id="kGu-SQ-MdD"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityView" destination="gWE-H8-hBa" id="Gzx-uv-FBs"/>
                         <outlet property="listView" destination="Q2l-xi-Nbc" id="8e0-e1-gHQ"/>
+                        <outlet property="noResultsLabel" destination="L4i-kN-d6J" id="KEW-CG-yaG"/>
                         <outlet property="searchBar" destination="d6V-BH-w2N" id="xYy-Gx-GZZ"/>
                     </connections>
                 </viewController>
@@ -101,6 +115,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="launch" width="512" height="384"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
